# janus-nlp

./: .gitignore  CMakeLists.txt  README.md  build.sh  setup.py
data/: failed_initial_conditions.pkl  failed_parameters.pkl  optimal_initial_conditions.pkl  optimal_parameters.pkl
examples/cpp/: CMakeLists.txt  auglang_fvdp_example.hpp  bratu_ode.hpp  burgers_auglang_inverse_example.hpp  lnsrch_example.cpp  lnsrchte_example.hpp  mint_auglang_bratu_example.hpp  mint_auglang_vdp_example.hpp  mint_vdp_example.hpp  minu_auglang_linear_example.hpp  minu_auglang_troesch_example.hpp  newt_dubins_example.cpp  newt_dubins_example.hpp  newt_example.cpp  newt_vdp_example.cpp  newted_control_example.cpp  newted_control_example.hpp  newted_vdp_example.cpp  newted_vdp_example.hpp
examples/janus_nlp/: __init__.py
examples/python/: #vdp_global_mint_smac_ipopt_auglang.py#  augm_merit_ipopt.py  botorch_lightbpm_autoencoder_example.py  botorch_lightbpm_example.py  bratu_global_smac_ipopt_auglang.py  burgers_inverse_smac_ipopt_auglang.py  cmaes_sample.py  fvdp_global_smac_ipopt_auglang.py  linear_global_minu_smac_ipopt_auglang.py  newt_batch.py  newt_dual.py  newt_example.py  smac_LightGBM.py  vdp_global.py  vdp_global_mint.py  vdp_global_mint_botorch_auglang.py  vdp_global_mint_botorch_ipopt.py  vdp_global_mint_smac.py  vdp_global_mint_smac_ipopt_auglang.py  vdp_global_smac.py  vdp_traj.py  vdpc_global.py
janus_nlp.egg-info/: PKG-INFO  SOURCES.txt
src/cpp/: bindings.cpp  lnsrch.hpp  lnsrchTe.hpp  lnsrchTeD.hpp  lnsrchte.hpp  lnsrchted.hpp  newt.hpp  newtTe.hpp  newtte.hpp  newtted.hpp
src/python/: auglag.py  newt.py
src/python/janus_nlp/: __init__.py  newtedcontrolexample.py
src/python/janus_nlp.egg-info/: SOURCES.txt  top_level.txt
tests/cpp/: CMakeLists.txt  nlp_solver_test.cpp
